# golang-android

./: README.md  godemo.go  test.c
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ejin/ndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ejin/ndk/: MainActivity.java
app/src/main/jniLibs/: native-lib.c
app/src/main/jniLibs/include/: libgodemo.h
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/ejin/ndk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
